--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
 # CORS Configuration (allow frontend to connect)
-spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000
+# Update the Vercel URL after deployment: https://your-app-name.vercel.app
+spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000,https://*.vercel.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
