add cors config class in backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.h2.console.path=/h2-console
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
-# CORS Configuration (allow frontend to connect)
-# Update the Vercel URL after deployment: https://your-app-name.vercel.app
-spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000,https://riff-music-app.vercel.app
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
+# CORS Configuration - Now handled by CorsConfig.java
+# spring.web.cors.allowed-origins=http://localhost:5173,http://localhost:3000,https://riff-music-app.vercel.app
+# spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# spring.web.cors.allowed-headers=*
+
